--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -16,3 +16,4 @@ jobs:
       - uses: googleapis/release-please-action@v4
         with:
           token: ${{ github.token }}
+          config-file: .release-please-config.json
